Se agrego el guardado de video de consultad

--- a/public/test/video2.html
+++ b/public/test/video2.html
@@ -1,5 +1,5 @@
 <div ng-init="iniciar()">
-    <video id="video"  controls autoplay>
+    <video id="video"  controls>
         
     </video>
 </div>    
