--- a/public/pages/HistorialConsultas.html
+++ b/public/pages/HistorialConsultas.html
@@ -89,6 +89,20 @@
                 <input type="email" class="form-control" ng-model="correo" id="correo" placeholder="examlpe@correo.com" disabled>
             </div>
         </div>
+        <div class="col-sm-12">
+            <h2>Video Consulta</h2>
+            <div class="row">
+                <div class="col-sm-4">
+                    <h4>Medico</h4>
+                    <video id="medico" controls></video>
+                </div>
+                <div class="row"></div>
+                <div class="col-sm-8">
+                    <h4>Paciente</h4>
+                    <video id="paciente" controls></video>
+                </div>
+            </div>
+        </div>
         <button type="button" class="btn btn-success btn-sm text-center btn-lg wow fadeInRight" ng-show="TablaFiltrada"
             ng-click="OcultarDataFiltrada()"><i class="fas fa-undo-alt mr-2"></i></i>Regresar</button>
     </div>
