--- a/public/pages/HistorialConsultas.html
+++ b/public/pages/HistorialConsultas.html
@@ -20,7 +20,7 @@
                     <td>{{data.malestar}}</td>
                     <td><button type="button" class="btn btn-primary" ng-click="FiltrarConsulta($index)"><i
                                 class="fas fa-info-circle"></i></button></td>
-                    <td><a class="btn btn-danger" href="#!recetaMedica"><i class="fas fa-file-medical text-light"></i></a></td>
+                    <td><a class="btn btn-danger" ng-click="formReceta(data.nombreUsuario)" href="#!/form/recetaMedica"><i class="fas fa-file-medical text-light"></i></a></td>
                 </tr>
             </tbody>
         </table>
