--- a/public/routing.html
+++ b/public/routing.html
@@ -70,7 +70,7 @@
                     <li ><a ng-if="!usuario" href="#!Login" ng-click="ocultar()">Iniciar Sesión</a></li>
                     <li ng-if="usuario"><a href="#" ng-click="cerrarSesion()">Cerrar Sesion</a></li>
                     <li ng-if="privilegio == 0"><a href="#!videoContactos">Video Consulta</a></li>
-                    <li><a href="#!graficas">Gráficas y<br>Estadísticos</a></li>
+                    <li ng-if="privilegio == 2"><a href="#!graficas">Gráficas y<br>Estadísticos</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
         </div>
