ya esta la receta tambien modifique el css

--- a/public/routing.html
+++ b/public/routing.html
@@ -61,6 +61,7 @@
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
                     <li ng-if="privilegio == 2 "><a href="#!HistorialConsultas">Historial de Consultas</a></li>
+                    <li><a href="#!receta">Receta</a></li>
                     <!--<li ng-if="privilegio == 0"><a href="#!HistorialConsultasPaciente">Historial de Consultas</a></li>-->
                     <li ng-if="usuario == 'root'"><a href="#!form1" ng-click="ocultar()">Registro Personal</a></li>
                     <li ng-if="privilegio == 2"><a href="#!formPaciente">Registrar consulta</a></li>
