Se agregaron los campos edad y sexo

--- a/public/pages/HistorialConsultas.html
+++ b/public/pages/HistorialConsultas.html
@@ -38,6 +38,8 @@
                     <th scope="col">Peso</th>
                     <th scope="col">Presion</th>
                     <th scope="col">Malestar</th>
+                    <th scope="col">Sexo</th>
+                    <th scope="col">Edad</th>
                 </tr>
             </thead>
             <tbody>
@@ -52,6 +54,8 @@
                     <td>{{dataFiltrada[0].peso}}</td>
                     <td>{{dataFiltrada[0].presion}}</td>
                     <td>{{dataFiltrada[0].malestares}}</td>
+                    <td>{{dataFiltrada[0].sexo}}</td>
+                    <td>{{dataFiltrada[0].edad}}</td>
                 </tr>
             </tbody>
         </table>
