--- a/public/pages/video.html
+++ b/public/pages/video.html
@@ -51,6 +51,13 @@
                       </div>
                       <textarea ng-model="alergias" rows="4" cols="50" placeholder="Alergias" disabled></textarea>
                   </div>
+                  <label for="sexo">Sexo</label>
+                  <div class="input-group flex-nowrap mb-3">
+                      <div class="input-group-prepend">
+                          <span class="input-group-text bg-light" id="addon-wrapping"><i class="fas fa-user-nurse"></i></span>
+                      </div>
+                      <input type="text" ng-model="sexo" disabled>
+                  </div>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
                   <label for="peso">Peso</label>
@@ -75,6 +82,13 @@
                           <span class="input-group-text bg-light" id="addon-wrapping"><i class="fas fa-user-nurse"></i></span>
                       </div>
                       <textarea ng-model="malestares" rows="4" cols="50" placeholder="Malestares" disabled></textarea>
+                  </div>
+                  <label for="edad">Edad</label>
+                  <div class="input-group flex-nowrap mb-3">
+                      <div class="input-group-prepend">
+                          <span class="input-group-text bg-light" id="addon-wrapping"><i class="fas fa-user-nurse"></i></span>
+                      </div>
+                      <input type="number" ng-model="edad" placeholder="Edad" disabled>
                   </div>
               </div>
           </div>
