--- a/public/pages/HistorialConsultas.html
+++ b/public/pages/HistorialConsultas.html
@@ -98,7 +98,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <h4>Medico</h4>
-                    <video id="medico" controls></video>
+                    <video id="medico" width="100%" height="auto" controls></video>
                 </div>
                 <div class="row"></div>
                 <div class="col-sm-8">
